# scdata

./: .gitignore  README.md  setup.cfg
notebooks/: analysis.ipynb
src/scdata/: __init__.py  api.py  crawl.py  crawler.py  genre.py  load.py
src/scdata/api/: __init__.py  soundcloud_api.py
tools/: api.py  crawl.py  finalize.py  scrape.py
