[metadata]
name = scdata
version = 0.1.0
author = Leonard Dahlmann
author_email = leo.dahlmann@gmail.com
description = SoundCloud dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leod/scdata
project_urls =
    Bug Tracker = https://github.com/leod/scdata/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp[speedups]
    python-dotenv
    numpy
    mutagen
    tqdm
    pandas
    matplotlib
    pillow

[options.packages.find]
where = src
